force-app/main/default/objects/Case/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>