force-app/main/default/objects/Case/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
                <default>true</default>
                <label>PROD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>