force-app/main/default/objects/Case/fields/Error_Json__c.field-meta.xml
<CustomField>
    <fullName>Error_Json__c</fullName>
    <label>AI Diagnostic JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>