force-app/main/default/objects/Case/fields/Error_Signature__c.field-meta.xml
<CustomField>
    <fullName>Error_Signature__c</fullName>
    <label>Error Signature</label>
    <description>Hash pour regrouper les erreurs identiques</description>
    <length>255</length>
    <type>Text</type>
</CustomField>