force-app/main/default/objects/Case/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>