force-app/main/default/objects/Case/fields/Raw_Error__c.field-meta.xml
<CustomField>
    <fullName>Raw_Error__c</fullName>
    <label>Raw Error / Stacktrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>