force-app/main/default/objects/Case/fields/Release_Tag__c.field-meta.xml
<CustomField>
    <fullName>Release_Tag__c</fullName>
    <label>Release Tag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>