force-app/main/default/objects/Case/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>Error User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Error Cases</relationshipLabel>
    <relationshipName>Error_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>