force-app/main/default/objects/Case/recordTypes/Debug.recordType-meta.xml
<RecordType>
    <fullName>Debug</fullName>
    <active>true</active>
    <label>Debug</label>
    <description>Record Type pour les Cases de debug technique générés automatiquement par le système de diagnostic IA</description>
</RecordType>